<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="copyright_osm">Map data © OpenStreetMap contributors</string>

    <string name="menu_preferences">Settings</string>
    <string name="menu_position_enter_coordinates">Map Position</string>
    <string name="menu_svgclear">Clear SVG icon cache</string>

    <string name="cancelbutton">Cancel</string>
    <string name="okbutton">OK</string>
    <string name="downloadnowbutton">OK</string>
    <string name="rotate_ccw_button">CCW</string>
    <string name="rotate_reset_button">Reset</string>
    <string name="rotate_cw_button">CW</string>
    <string name="zoomin_button">+</string>
    <string name="zoomout_button">-</string>

    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="zoomlevel">Zoom Level</string>

    <string name="preferences_scale">Display Scale</string>
    <string name="preferences_scale_desc">Adjust scale of the map display</string>

    <string name="preferences_language">Multilingual Map Language Selection</string>
    <string name="preferences_language_desc">Select language of multilingual map (multilingual map must be loaded)</string>

    <string name="preferences_language_showlocal">Language Display Style</string>
    <string name="preferences_language_showlocal_desc">Show both local and preferred language</string>

    <string name="preferences_scalebar">Scale bar</string>
    <string name="preferences_scalebar_desc">Set units system on the scale bar</string>

    <string name="preferences_textwidth">Maximum Textwidth</string>
    <string name="preferences_textwidth_desc">Debugging aid for setting maximum textwidth</string>

    <string name="preferences_category_wayfiltering">Way filtering</string>
    <string name="preferences_wayfiltering">Way filtering</string>
    <string name="preferences_wayfiltering_desc">Way filtering reduces the number of ways returned at the risk of clipping artifacts</string>
    <string name="preferences_wayfiltering_distance">Way filter size</string>
    <string name="preferences_wayfiltering_distance_desc">The higher the number the less artifacts, but slower</string>

    <string name="preferences_category_tilecache">Tile cache</string>
    <string name="preferences_tilecache_persistence">Persistence</string>
    <string name="preferences_tilecache_persistence_desc">Keep tiles over activity restart</string>

    <string name="preferences_debug_timing">Debug timing</string>
    <string name="preferences_debug_timing_desc">Measure rendering time</string>
    <string name="preferences_rendering_threads">Number of threads to render concurrently</string>
    <string name="preferences_rendering_threads_desc">Minimum 1</string>

    <string name="preferences_r4_emergency">Emergency</string>
    <string name="preferences_r4_emergency_desc">Show hospitals, doctors, police etc</string>
    <string name="preferences_r4_accommodation">Accommodation</string>
    <string name="preferences_r4_accommodation_desc">Show hostels, guesthouses, campsites etc</string>
    <string name="preferences_r4_tourism_poi">Tourism</string>
    <string name="preferences_r4_tourism_poi_desc">Show points of interest</string>
    <string name="preferences_r4_shopping">Shopping</string>
    <string name="preferences_r4_shopping_desc">Show shops</string>
    <string name="preferences_r4_amenities">Amenities</string>
    <string name="preferences_r4_amenities_desc">Show amenities???</string>
    <string name="preferences_r4_public_transport">Transport</string>
    <string name="preferences_r4_public_transport_desc">Show transport</string>
    <string name="preferences_r4_food">Food</string>
    <string name="preferences_r4_food_desc">Show restaurants</string>
    <string name="preferences_r4_traffic">Traffic</string>
    <string name="preferences_r4_traffic_desc">Show traffic/transport??</string>
    <string name="preferences_r4_barriers">Barriers</string>
    <string name="preferences_r4_barriers_desc">Show barriers</string>
    <string name="preferences_r4_sports">Sports</string>
    <string name="preferences_r4_sports_desc">Show sports facilities</string>
    <string name="preferences_r4_places">Places</string>
    <string name="preferences_r4_places_desc">Show place names</string>
    <string name="preferences_r4_buildings">Buildings</string>
    <string name="preferences_r4_buildings_desc">Show buildings</string>
    <string name="preferences_r4_nature">Nature</string>
    <string name="preferences_r4_nature_desc">Show natural items</string>
    <string name="preferences_r4_areas">Areas</string>
    <string name="preferences_r4_areas_desc">Show areas</string>
    <string name="preferences_r4_roads">Roads</string>
    <string name="preferences_r4_roads_desc">Show roads</string>
    <string name="preferences_r4_waterbodies">Water</string>
    <string name="preferences_r4_waterbodies_desc">Show lakes, rivers etc</string>

    <string name="dialog_location_title">Coordinates</string>
    <string name="dialog_reverse_geocoding_title">Reverse Geocoding</string>
    <string name="dialog_theme_title">Select a theme</string>

    <string name="theme_motorider">Motorider</string>
    <string name="theme_biker">Biker</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_indigo">Indigo</string>
    <string name="theme_default">Default</string>
    <string name="theme_osmarender">Osmarender</string>
    <string name="theme_external">External theme (Android 5)</string>
    <string name="theme_external_archive">External theme archive</string>

    <string name="startup_dontshowagain">Don\'t show again</string>
    <string name="startup_message">To run this samples app, you need any map with filename berlin.map installed on storage.</string>
    <string name="startup_message_tilestore">To run this sample activity, you need a TMS tile store at /Android/media/org.mapsforge.samples.android/tilestore. Sample data in the app data directory.</string>
    <string name="startup_message_multimap">To run this sample activity, you need to download a low-resolution world map first.</string>
    <string name="startup_message_twomaps">To run this sample activity, you need also a map with filename second.map installed on storage.</string>
    <string name="startup_message_poi">To run this sample activity, you need any poi with filename berlin.poi installed on storage.\n\nadb push file.poi /Android/media/org.mapsforge.samples.android/berlin.poi</string>

    <string name="warning">Warning</string>
    <string name="startup_message_mbtiles">To run this sample activity, you need an MBTiles database installed on storage.</string>
    <string name="exit">Exit</string>
</resources>
