<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <org.mapsforge.map.android.view.MapView
        android:id="@+id/mapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" />

    <Button
        android:id="@+id/rotateCounterClockWiseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/rotate_ccw_button" />

    <Button
        android:id="@+id/rotateResetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/rotateCounterClockWiseButton"
        android:text="@string/rotate_reset_button" />

    <Button
        android:id="@+id/rotateClockwiseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_toEndOf="@id/rotateResetButton"
        android:text="@string/rotate_cw_button" />

    <TextView
        android:id="@+id/attribution"
        android:layout_width="fill_parent"
        android:layout_height="10dip"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="1dip"
        android:gravity="center"
        android:singleLine="true"
        android:text="@string/copyright_osm"
        android:textColor="#000"
        android:textSize="4pt" />

</RelativeLayout>